--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [project]
 name = "nornir-mcp"
 version = "0.1.0"
-description = "Add your description here"
+description = "MCP server for Nornir network automation, enabling LLMs to interact with network devices"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "mcp[cli]>=1.25.0",
     "nornir>=3.5.0",
     "nornir-napalm>=0.5.0",
     "nornir-utils>=0.2.0",
