--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "MCP server for Nornir network automation, enabling LLMs to intera
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "mcp[cli]>=1.25.0",
+    "fastmcp>=2.14.2",
     "nornir>=3.5.0",
     "nornir-napalm>=0.5.0",
     "nornir-utils>=0.2.0",
