refactor: Rename functions for clarity and update README documentation

--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,9 @@
 inventory:
   plugin: SimpleInventory
   options:
-    host_file: "hosts.yaml"
-    group_file: "groups.yaml"
-    defaults_file: "defaults.yaml"
+    host_file: "${NORNIR_INVENTORY_PATH}/hosts.yaml"
+    group_file: "${NORNIR_INVENTORY_PATH}/groups.yaml"
+    defaults_file: "${NORNIR_INVENTORY_PATH}/defaults.yaml"
 
 runner:
   plugin: threaded
-
