Restructure project to use src layout
- Move Python files to src/nornir_mcp package directory
- Update import paths to use relative imports
- Configure pyproject.toml for src layout with proper package settings
- Update command line entry point to use correct module path

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
 ]
 
 [project.scripts]
-nornir-mcp = "main:main"
+nornir-mcp = "nornir_mcp.main:main"
 
 [tool.uv]
-package = false
+package = true
