--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,16 @@ dependencies = ["fastmcp>=2.14.2", "nornir>=3.5.0", "nornir-napalm>=0.5.0"]
 [project.scripts]
 nornir-mcp = "nornir_mcp.main:main"
 
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.package-data]
+nornir_mcp = ["data/*.yaml"]
+
 [tool.uv]
 package = true
 
