--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,7 @@ wheels/
 # Virtual environments
 .venv
 
-.log
-hosts.yaml
-groups.yaml
-defaults.yaml
-lab/*
-!cisco.clab.yaml
-.claude/repomix-output.md
+*.log
+.claude/
+repomix-output.md
+repomix-output.xml
