--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,13 @@ version = "0.1.0"
 description = "MCP server for Nornir network automation, enabling LLMs to interact with network devices"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = ["fastmcp>=2.14.2", "nornir>=3.5.0", "nornir-napalm>=0.5.0"]
+dependencies = [
+    "fastmcp>=2.14.2",
+    "nornir>=3.5.0",
+    "nornir-napalm>=0.5.0",
+    "nornir-netmiko>=1.0.1",
+    "nornir-paramiko>=0.3.0",
+]
 
 [project.scripts]
 nornir-mcp = "nornir_mcp.main:main"
