feat: Update capabilities descriptions and enhance getter documentation

--- a/src/nornir_mcp/data/capabilities.yaml
+++ b/src/nornir_mcp/data/capabilities.yaml
@@ -1,8 +1,12 @@
 getters:
-  arp_table: "Returns the ARP table of the device"
-  config: "Returns the running configuration of the device"
-  facts: "Returns general facts about the device (model, serial, vendor, uptime, etc.)"
-  interfaces: "Returns details of the interfaces of the device"
-  interfaces_ip: "Returns the IP addresses configured on the interfaces"
-  mac_address_table: "Returns the MAC address table of the device"
+  facts: "Retrieved device information (hostname, vendor, model, OS version, etc.)"
+  users: "Retrieved user account information and privileges"
   vlans: "Returns the VLANs configured on the device"
+  config: "Retrieved device configurations (startup, running, candidate)"
+  optics: "Retrieved optical interface information (empty for these devices)"
+  arp_table: "Retrieved ARP table entries (found one entry on R1)"
+  interfaces: "Retrieved interface details (status, speed, MAC addresses, etc.)"
+  interfaces_ip: "Retrieved IP address configuration on interfaces"
+  lldp_neighbors: "Retrieved LLDP neighbor information (empty for these devices)"
+  mac_address_table: "Returns the MAC address table of the device"
+  lldp_neighbors_detail: "Retrieved detailed LLDP neighbor information (empty for these devices)"
