feat: Add Netmiko commands resource and rename capabilities to getters
- Add top 10 common Netmiko CLI commands as a new resource in capabilities.yaml
- Rename resource from nornir://napalm_capabilities to nornir://napalm_getters
- Update function name from get_capabilities to get_getters
- Add get_netmiko_commands function to retrieve Netmiko commands from YAML
- Update main.py to register the new resource and import updated functions
- Fix documentation string in run_napalm_getter to reference correct resource name
- Apply style fixes for line length and missing newlines
- Update type definitions with proper formatting

These changes enhance the Nornir MCP server with additional Netmiko command
resources while maintaining naming consistency and code quality standards.

--- a/src/nornir_mcp/data/capabilities.yaml
+++ b/src/nornir_mcp/data/capabilities.yaml
@@ -10,3 +10,15 @@ getters:
   lldp_neighbors: "Retrieved LLDP neighbor information (empty for these devices)"
   mac_address_table: "Returns the MAC address table of the device"
   lldp_neighbors_detail: "Retrieved detailed LLDP neighbor information (empty for these devices)"
+
+netmiko_commands:
+  "show version": "Display device version and system information"
+  "show running-config": "Display current device configuration"
+  "show ip interface brief": "Display interface status and IP addresses"
+  "show interfaces": "Display detailed interface statistics"
+  "show mac address-table": "Display MAC address table (switches) or show mac address (some platforms)"
+  "show arp": "Display ARP table information (use show ip arp on some platforms)"
+  "show lldp neighbors": "Display LLDP neighbor information"
+  "show inventory": "Display hardware inventory"
+  "show processes cpu": "Display system processes and CPU usage"
+  "show logging": "Display system logging information"
